Working on fixes for the header overflowing when the chapter title is too large

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -47,6 +47,7 @@
     margin-left: 10px;
     font-weight: bold;
     text-align: center;
-    font-size: 30px;
+    font-size: 24px;
+    // align-self: center;
   }
 }
